added playlist tracks to playlistview

--- a/src/frontend/TuneShare/src/app/playlistview/playlistview.component.html
+++ b/src/frontend/TuneShare/src/app/playlistview/playlistview.component.html
@@ -1,9 +1,9 @@
-<div class="pt-3 my-1 px-auto playlistHeader container">
+<div class="pt-3 mt-1 px-auto pb-3 mb-4 playlistHeader container">
   <div class="row align-items-center">
     <div class="imgPlaylist align-items-center" [ngClass]="{ 'mx-auto': isMobile }"><img [src]="currentPlaylist.cover_url" class="img my-3" alt="{{ currentPlaylist.title }}" /></div>
     <div class="container align-items-bottom px-0" [ngClass]="{ 'row': isMobile,'text-center': isMobile, 'mx-auto': isMobile, 'justify-content-center':isMobile, 'col': !isMobile, 'text-left': !isMobile, 'px-4':!isMobile }">
       <h5 class="row" [ngClass]="{ 'text-center': isMobile, 'mx-auto': isMobile }"><a href="/profile" class="card-author px-0" [ngClass]="{ 'text-center': isMobile, 'mx-auto': isMobile }">{{ currentPlaylist.owner_id }}</a></h5>
-      <h4 class="card-title row">{{ currentPlaylist.title }}</h4>
+      <h4 class="card-title row"><div class="px-0" [ngClass]="{ 'text-center': isMobile, 'mx-auto': isMobile }">{{ currentPlaylist.title }}</div></h4>
       <div class="row">
         <div class="logos align-items-center text-left px-0" [ngClass]="{ 'mt-1': isMobile, 'mt-3': !isMobile }">
           <a class="linkedButton appleLink my-auto py-auto" href="https://apple.com" target="_blank"><i class="bi-apple"></i></a><a> | </a>
@@ -18,4 +18,26 @@
     </div>
   </div>
 </div>
-
+<div class="table-responsive mx-4 trackTable">
+  <table class="table table-striped container p-1">
+    <caption>{{ tracks.length }} tracks</caption>
+    <thead *ngIf="!isMobile">
+    <tr>
+      <th class="text-end" scope="col" style="width: 1em;">#</th>
+      <th scope="col"></th>
+      <th class="durationCol" *ngIf="!isMobile" scope="col">Duration</th>
+      <th scope="col">Title</th>
+      <th scope="col">Artist</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr *ngFor="let track of tracks, let i = index" class="playlistRow align-items-center">
+        <th class="text-end" *ngIf="!isMobile">{{ i }}</th>
+        <th style="width: 4.5em;" scope="row"><img src="/assets/papagei-foto.jpg" class="rounded-1 trackImg" style="width: 3em; height: 3em;"></th>
+        <td class="durationCol" *ngIf="!isMobile">{{ track.duration }}</td>
+        <td>{{ track.title }}</td>
+        <td>{{ track.artist }}</td>
+    </tr>
+    </tbody>
+  </table>
+</div>
