--- a/src/frontend/TuneShare/src/app/playlistview/playlistview.component.scss
+++ b/src/frontend/TuneShare/src/app/playlistview/playlistview.component.scss
@@ -20,7 +20,6 @@
 .playlistHeader{
   color: #4F4E57;
   white-space: pre-wrap;
-  padding-bottom: 2em;
   border-bottom: solid 1px #4F4E57;
 }
 
@@ -51,4 +50,27 @@
 
 .card-author{
   color: #4F4E57;
+}
+
+.playlistRow:hover{
+  transform: scale(1.002);
+}
+
+td, th{
+  line-height: 3em;
+  overflow: hidden;
+}
+
+.trackTable{
+  text-overflow: ellipsis;
+}
+
+.durationCol{
+  width: 6em;
+}
+
+.trackImg{
+  -webkit-box-shadow: 0px 0px 6px 0px #95899f;
+  -moz-box-shadow: 0px 0px 6px 0px #95899f;
+  box-shadow: 0px 0px 6px 0px #95899f;
 }
