--- a/src/frontend/TuneShare/src/app/registration/registration.component.html
+++ b/src/frontend/TuneShare/src/app/registration/registration.component.html
@@ -52,11 +52,7 @@
                   </div>
 
                   <div class="form-check d-flex justify-content-center mb-5">
-                    <input class="form-check-input me-2" type="checkbox" value=""
-                           id="termsAndConditions" formControlName="checkbox"/>
-                    <label class="form-check-label" for="termsAndConditions">
-                      I agree all statements in <a href="#">Terms of service</a>
-                    </label>
+                    <span>Already have an account? <a href="/login">Sign in here</a></span>
                   </div>
 
                   <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
