Access-Token wird im local storage gespeichert
Außerdem leichte Umstrukturierung

--- a/src/frontend/TuneShare/src/app/authentication/login/login.component.html
+++ b/src/frontend/TuneShare/src/app/authentication/login/login.component.html
@@ -68,7 +68,7 @@
               <div *ngIf="window.innerWidth >= 992"
                    class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center justify-content-center order-1 order-lg-2">
 
-                <img ngSrc="../../assets/logoTuneShare.png"
+                <img ngSrc="../../../assets/logoTuneShare.png"
                      class="h-auto w-75" alt="TuneShare logo" height="546" width="546" priority>
 
               </div>
