--- a/src/frontend/TuneShare/src/app/playlist-rotate/playlist-rotate.component.scss
+++ b/src/frontend/TuneShare/src/app/playlist-rotate/playlist-rotate.component.scss
@@ -5,3 +5,14 @@
   height: 25%;
   width: auto;
 }
+
+.playlistsHome{
+  display: flex;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  white-space: none;
+}
+
+.singlePlaylist{
+  width: 100em;
+}
