--- a/src/frontend/TuneShare/src/app/playlist/playlist.component.scss
+++ b/src/frontend/TuneShare/src/app/playlist/playlist.component.scss
@@ -1,8 +1,8 @@
 .card {
   color: #4F4E57;
   transition: transform 0.2s;
-  width: 20em;
-  height: 22em;
+  max-width: 20em;
+  max-height: 22em;
   border: none;
   border-radius: 1em;
 }
@@ -13,7 +13,7 @@
   white-space: nowrap;
   max-height: 2.2em;
   overflow: hidden;
-  width: 1em;
+  width: auto;
 }
 
 .card:hover {
@@ -25,6 +25,7 @@
   color: #4F4E57;
   overflow: hidden;
   height: auto;
+  max-font-size: 1.3em;
 }
 
 .art-cover {
@@ -35,20 +36,26 @@
 }
 
 .card-author{
-  width: 47%;
+  width: 50%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
   padding-right: 0;
 }
 
 .logos{
   text-align: right;
-  width: 53%;
   padding-left: 0;
+  width: 45%;
+}
+
+.logos.bigLogos{
+  font-size: 1.1em;
 }
 
 .linkedButton{
   background: none;
   color: #4F4E57;
-  font-size: 1.3em;
   margin: 0.15em;
   padding: 0;
 }
