--- a/src/frontend/TuneShare/src/app/playlistList/playlist-list.component.html
+++ b/src/frontend/TuneShare/src/app/playlistList/playlist-list.component.html
@@ -1,4 +1,4 @@
-<div class="mt-4 px-4" style="width: 95%">
+<div class="mt-4 px-4 mx-auto" style="width: 95%">
   <h2 class="mb-1">{{ title }}</h2>
   <div class="row row-cols-auto mx-auto justify-content-center">
     <app-playlist
