added permanent dropdown

--- a/src/frontend/TuneShare/src/app/playlist-rotate/playlist-rotate.component.html
+++ b/src/frontend/TuneShare/src/app/playlist-rotate/playlist-rotate.component.html
@@ -1,8 +1,8 @@
 <h2 class="mb-4">{{ title }}</h2>
 
-  <div class="container playlistsHome">
-    <div *ngFor="let playlist of playlists" class="singlePlaylist m-3"><app-playlist [playlist]="playlist"></app-playlist></div>
-  </div>
+<!--  <div class="container playlistsHome">-->
+<!--    <div *ngFor="let playlist of playlists" class="singlePlaylist m-3"><app-playlist [playlist]="playlist"></app-playlist></div>-->
+<!--  </div>-->
 
 <div id="{{ carouselId }}" class="carousel slide" data-bs-interval="false" data-pause="hover" style="overflow: hidden;">
   <div class="carousel-inner">
