authentication for navbar
Navbar passt sich jetzt an, je nachdem, ob der User eingeloggt ist oder nicht

--- a/src/frontend/TuneShare/src/app/app.component.html
+++ b/src/frontend/TuneShare/src/app/app.component.html
@@ -14,7 +14,16 @@
       <ul class="dropdown-menu dropdown-menu-end bg-dark position-absolute" aria-labelledby="navbarDropdown">
         <li class="mx-1"><a class="nav-link" href="/profile">Account</a></li>
         <li class="mx-1"><a class="nav-link" href="/settings">Settings</a></li>
-        <li class="mx-1"><a class="nav-link" href="/register">Sign out</a></li>
+        <li class="mx-1">
+          <a *ngIf="authService.isLoggedIn; else signIn" class="nav-link" href="/" (click)="authService.clearAccessToken()">
+            Sign out
+          </a>
+          <ng-template #signIn>
+            <a class="nav-link" href="/login">
+              Sign in
+            </a>
+          </ng-template>
+        </li>
       </ul>
     </li>
     <button class="navbar-toggler mr-auto mx-2 p-0" style="border: none" type="button" data-bs-toggle="collapse"
@@ -58,7 +67,16 @@
         <ul class="dropdown-menu dropdown-menu-end bg-dark" aria-labelledby="navbarDropdown">
           <li><a class="nav-link" href="/profile">Account</a></li>
           <li><a class="nav-link" href="/settings">Settings</a></li>
-          <li><a class="nav-link" href="/register">Sign out</a></li>
+          <li>
+            <a *ngIf="authService.isLoggedIn; else signIn" class="nav-link" href="/" (click)="authService.clearAccessToken()">
+              Sign out
+            </a>
+            <ng-template #signIn>
+              <a class="nav-link" href="/login">
+                Sign in
+              </a>
+            </ng-template>
+          </li>
         </ul>
       </li>
     </ul>
