improvised fix user profile-playlists

--- a/src/frontend/TuneShare/src/app/user-profile/user-profile.component.html
+++ b/src/frontend/TuneShare/src/app/user-profile/user-profile.component.html
@@ -124,6 +124,12 @@
     <div class="col p-0 mx-2" style="width: 10em; height: 0;"></div>
     <div class="col p-0 mx-2" style="width: 10em; height: 0;"></div>
     <div class="col p-0 mx-2" style="width: 10em; height: 0;"></div>
+    <div class="col p-0 mx-2" style="width: 10em; height: 0;"></div>
+    <div class="col p-0 mx-2" style="width: 10em; height: 0;"></div>
+    <div class="col p-0 mx-2" style="width: 10em; height: 0;"></div>
+    <div class="col p-0 mx-2" style="width: 10em; height: 0;"></div>
+    <div class="col p-0 mx-2" style="width: 10em; height: 0;"></div>
+    <div class="col p-0 mx-2" style="width: 10em; height: 0;"></div>
 
   </div>
   <div class="text-center">
