--- a/src/frontend/TuneShare/src/app/app.component.html
+++ b/src/frontend/TuneShare/src/app/app.component.html
@@ -40,19 +40,21 @@
         <a class="nav-link" href="#">Friends</a>
       </li>
       <li *ngIf="isMobile">
-        <input class="form-control" type="search" placeholder="Search" aria-label="Search"
-               style="background-color: #D8C9E1; border-color: #8A5CA3;">
+        <form (ngSubmit)="submitSearch(f)" #f=ngForm>
+          <input class="form-control" type="search" placeholder="Search" aria-label="Search" name="inputSearch"
+                 style="background-color: #D8C9E1; border-color: #8A5CA3;" ngModel>
+        </form>
       </li>
     </ul>
-    <form *ngIf="!isMobile" class="form-inline ms-auto px-3" style="width: 20em">
+    <form *ngIf="!isMobile" class="form-inline ms-auto px-3" style="width: 20em" (ngSubmit)="submitSearch(f)" #f=ngForm>
       <div class="input-group">
         <div class="input-group-prepend">
-          <span class="input-group-text"
+          <button type="submit" class="input-group-text"
                 style="background-color: #D8C9E1; border-bottom-right-radius: 0; border-top-right-radius: 0; border-color: #8A5CA3"
-                id="searchText"><i class="bi bi-search"></i></span>
+                id="searchText"><i class="bi bi-search"></i></button>
         </div>
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search"
-               style="background-color: #D8C9E1; border-bottom-left-radius: 0; border-color: #8A5CA3;">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="inputSearch"
+               style="background-color: #D8C9E1; border-bottom-left-radius: 0; border-color: #8A5CA3;" ngModel>
       </div>
     </form>
     <ul *ngIf="!isMobile" class="navbar-nav ms-auto my-0 py-0" style="font-size: x-large">
