rearranged playlist view component

--- a/src/frontend/TuneShare/src/app/playlistview/playlistview.component.html
+++ b/src/frontend/TuneShare/src/app/playlistview/playlistview.component.html
@@ -25,18 +25,18 @@
     <tr>
       <th class="text-end" scope="col" style="width: 1em;">#</th>
       <th scope="col"></th>
-      <th class="durationCol" *ngIf="!isMobile" scope="col">Duration</th>
-      <th scope="col">Title</th>
+      <th class="durationCol" *ngIf="!isMobile" scope="col">Title</th>
       <th scope="col">Artist</th>
+      <th scope="col">Duration</th>
     </tr>
     </thead>
     <tbody>
     <tr *ngFor="let track of tracks, let i = index" class="playlistRow align-items-center">
         <th class="text-end" *ngIf="!isMobile">{{ i }}</th>
         <th style="width: 4.5em;" scope="row"><img src="/assets/papagei-foto.jpg" class="rounded-1 trackImg" style="width: 3em; height: 3em;"></th>
-        <td class="durationCol" *ngIf="!isMobile">{{ track.duration }}</td>
         <td>{{ track.title }}</td>
         <td>{{ track.artist }}</td>
+        <td class="durationCol" *ngIf="!isMobile">{{ track.duration }}</td>
     </tr>
     </tbody>
   </table>
