only playlists in userprofile and fiixed copy

--- a/src/frontend/TuneShare/src/app/playlistList/playlist-list.component.html
+++ b/src/frontend/TuneShare/src/app/playlistList/playlist-list.component.html
@@ -9,5 +9,15 @@
     <div class="col p-0" style="width: 21em; height: 0;"></div>
     <div class="col p-0" style="width: 21em; height: 0;"></div>
     <div class="col p-0" style="width: 21em; height: 0;"></div>
+    <div class="col p-0" style="width: 21em; height: 0;"></div>
+    <div class="col p-0" style="width: 21em; height: 0;"></div>
+    <div class="col p-0" style="width: 21em; height: 0;"></div>
+    <div class="col p-0" style="width: 21em; height: 0;"></div>
+    <div class="col p-0" style="width: 21em; height: 0;"></div>
+    <div class="col p-0" style="width: 21em; height: 0;"></div>
+    <div class="col p-0" style="width: 21em; height: 0;"></div>
+    <div class="col p-0" style="width: 21em; height: 0;"></div>
+    <div class="col p-0" style="width: 21em; height: 0;"></div>
+    <div class="col p-0" style="width: 21em; height: 0;"></div>
   </div>
 </div>
