initial playlist add
TODO rework

--- a/src/frontend/TuneShare/src/app/user-profile/user-profile.component.html
+++ b/src/frontend/TuneShare/src/app/user-profile/user-profile.component.html
@@ -77,5 +77,5 @@
       </a>
     </span>
 </div>
-<app-playlistList title="Playlists"></app-playlistList>
+<app-playlistList headline="Playlists"></app-playlistList>
 <div style="height: 3em;"></div>
