added Followed page and consistent top padding

--- a/src/frontend/TuneShare/src/app/app.component.html
+++ b/src/frontend/TuneShare/src/app/app.component.html
@@ -37,7 +37,7 @@
         <a class="nav-link" href="/library">Library</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Friends</a>
+        <a class="nav-link" href="/followed">Followed</a>
       </li>
       <li *ngIf="isMobile">
         <form (ngSubmit)="submitSearch(f)" #f=ngForm>
