--- a/src/frontend/TuneShare/src/app/user-listed/user-listed.component.scss
+++ b/src/frontend/TuneShare/src/app/user-listed/user-listed.component.scss
@@ -16,3 +16,13 @@
 .inside{
   border-bottom: 2px solid #8A5CA3;
 }
+
+.iconFollowPlain{
+  color: black;
+  font-size: 1.5em;
+  cursor: pointer;
+}
+
+.invisible{
+  opacity: 0;
+}
