added AppleMusic API Support

--- a/src/frontend/TuneShare/src/app/settings/settings.component.html
+++ b/src/frontend/TuneShare/src/app/settings/settings.component.html
@@ -37,7 +37,7 @@
     </div>
     <div class="card-body">
       <p><button class="btn" (click)="linkSpotify()">Link Spotify</button></p>
-      <button class="btn">Link Apple Music</button>
+      <button class="btn" (click)="linkAppleMusic()">Link Apple Music</button>
     </div>
   </div>
 
