getSpotify Playlists to Frontend

--- a/src/frontend/TuneShare/src/app/add-playlist/add-playlist.component.html
+++ b/src/frontend/TuneShare/src/app/add-playlist/add-playlist.component.html
@@ -12,6 +12,6 @@
   </ul>
   <div class="mainContainer pt-3">
     <h5>Choose playlist to import</h5>
-    <app-playlistList headline="Choose playlist to import"></app-playlistList>
+    <app-playlistList headline="Choose playlist to import" [playlists]="playlists"></app-playlistList>
   </div>
 </div>
