--- a/src/frontend/TuneShare/src/app/playlistList/playlist-list.component.html
+++ b/src/frontend/TuneShare/src/app/playlistList/playlist-list.component.html
@@ -1,5 +1,5 @@
 <div class="mt-4 px-4 mx-auto" style="width: 95%">
-  <h2 class="mb-1">{{ headline }}</h2>
+  <h2 class="mb-1 container">{{ headline }}</h2>
   <div class="row row-cols-auto mx-auto justify-content-center">
     <app-playlist
       class="col my-2 p-0" style="width: 21em"
