fixed user-profile playlistList

--- a/src/frontend/TuneShare/src/app/user-profile/user-profile.component.html
+++ b/src/frontend/TuneShare/src/app/user-profile/user-profile.component.html
@@ -77,5 +77,7 @@
       </a>
     </span>
 </div>
-<app-playlistList headline="Playlists"></app-playlistList>
-<div style="height: 3em;"></div>
+<div class="mt-4 mb-5 px-4 mx-auto" style="width: 95%">
+  <h2 class="mb-1 container">Playlists</h2>
+  <app-playlistList [playlists]="playlists"></app-playlistList>
+</div>
